# protobuf-c-ng

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/google/protobuf/compiler/c/: c_file.cc
